fixed wrapping issues

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -34,6 +34,7 @@ body {
 #__next {
     width: 100%;
     max-width: max(golden-ratio.hor(1), 800px);
+    overflow-x: hidden;
     padding: golden-ratio.min(11) golden-ratio.min(9);
 
     * {
@@ -107,6 +108,7 @@ textarea {
 
 h1 {
     font-size: golden-ratio.min(4);
+    white-space: nowrap;
 }
 
 h2 {
